# NestedSampling.hs

./: .gitignore  NestedSampling-hs.cabal  README.md  ns-example.prof  plot_outputs.py  showresults.py
lib/: Makefile
lib/NestedSampling/: Logging.hs  Model.hs  ParallelSampler.hs  RNG.hs  Rosenbrock.hs  Sampler.hs  SpikeSlab.hs  Utils.hs
src/: Main.hs  MainRosenbrock.hs  Mini.hs  main.hs
src/NestedSampling/: RNG.hs  Sampler.hs  SpikeSlab.hs  Utils.hs  Walkable.hs
test/: CrashTesting.hs  Ising.hs  Mini.hs  Parallel.hs  Rosenbrock.hs  SpikeSlab.hs
test/Model/: Ising.hs  Rosenbrock.hs  SpikeSlab.hs
test/Models/: Ising.hs  Rosenbrock.hs  SpikeSlab.hs
