name:                NestedSampling-hs
version:             0.3.0
synopsis:            Classic Nested Sampling.
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          bj.brewer@auckland.ac.nz
category:            Math
build-type:          Simple
cabal-version:       >=1.10
description:
  Eventually, this will be a Haskell implementation of classic Nested Sampling.
  Warning: I am a beginner at this language so don't expect much for a while.

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2
  exposed-modules:
      NestedSampling.Rosenbrock
    , NestedSampling.Sampler
    , NestedSampling.SpikeSlab
    , NestedSampling.Utils
  build-depends:
      base >= 4 && < 6
    , mwc-random
    , primitive
    , psqueues
    , transformers
    , vector

executable ns-example
  hs-source-dirs:    src
  Main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -Wall
  build-depends:
      base
    , NestedSampling-hs
    , mwc-random

executable rosenbrock-example
  hs-source-dirs:    src
  Main-is:           MainRosenbrock.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -Wall
  build-depends:
      base
    , NestedSampling-hs
    , mwc-random

executable ns-mini-example
  hs-source-dirs:    src
  Main-is:           Mini.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -fprof-auto -rtsopts
  build-depends:
      base
    , NestedSampling-hs
    , mwc-random

