name:                NestedSampling-hs
version:             0.3.2
synopsis:            Classic Nested Sampling.
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          bj.brewer@auckland.ac.nz
category:            Math
build-type:          Simple
cabal-version:       >= 1.10
description:
  This is a Haskell implementation of the classic Nested Sampling algorithm
  introduced by John Skilling. You can use it for Bayesian inference,
  statistical mechanics, and optimisation applications.

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2
  exposed-modules:
      NestedSampling.Sampler
    , NestedSampling.Utils
  build-depends:
      base >= 4 && < 6
    , formatting
    , mwc-random
    , primitive
    , psqueues
    , text
    , transformers
    , vector

Test-suite spikeslab
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           SpikeSlab.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -Wall
  other-modules:
      Model.SpikeSlab
  build-depends:
      base
    , NestedSampling-hs
    , mwc-random
    , primitive
    , vector

Test-suite rosenbrock
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           Rosenbrock.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -Wall
  other-modules:
      Model.Rosenbrock
  build-depends:
      base
    , NestedSampling-hs
    , mwc-random
    , primitive
    , vector

Test-suite mini-spikeslab
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           Mini.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -fprof-auto -rtsopts
  other-modules:
      Model.SpikeSlab
  build-depends:
      base
    , NestedSampling-hs
    , mwc-random
    , primitive
    , vector

