name:                NestedSampling-hs
version:             0.4.0
synopsis:            Classic Nested Sampling.
license:             MIT
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          bj.brewer@auckland.ac.nz
category:            Math
build-type:          Simple
cabal-version:       >= 1.18
description:
  This is a Haskell implementation of the classic Nested Sampling algorithm
  introduced by John Skilling. You can use it for Bayesian inference,
  statistical mechanics, and optimisation applications.

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:
    -Wall
  exposed-modules:
      NestedSampling.Logging
    , NestedSampling.Sampler
    , NestedSampling.Utils
  build-depends:
      base          >= 4.8 && < 5
    , formatting    >= 6.2 && < 7
    , mwc-random    >= 0.13 && < 1
    , primitive     >= 0.6 && < 1
    , psqueues      >= 0.2 && < 1
    , text          >= 1.2 && < 2
    , transformers  >= 0.5 && < 1
    , vector        >= 0.11 && < 1

Test-suite spikeslab
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           SpikeSlab.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -Wall
  other-modules:
      Model.SpikeSlab
  build-depends:
      base               >= 4.8 && < 5
    , NestedSampling-hs
    , mwc-random         >= 0.13 && < 1
    , primitive          >= 0.6 && < 1
    , vector             >= 0.11 && < 1

Test-suite rosenbrock
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           Rosenbrock.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -Wall
  other-modules:
      Model.Rosenbrock
  build-depends:
      base               >= 4.8 && < 5
    , NestedSampling-hs
    , mwc-random         >= 0.13 && < 1
    , primitive          >= 0.6 && < 1
    , vector             >= 0.11 && < 1

Test-suite mini-spikeslab
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  Main-is:           Mini.hs
  default-language:  Haskell2010
  ghc-options:
    -O2 -fprof-auto -rtsopts
  other-modules:
      Model.SpikeSlab
  build-depends:
      base               >= 4.8 && < 5
    , NestedSampling-hs
    , mwc-random         >= 0.13 && < 1
    , primitive          >= 0.6 && < 1
    , vector             >= 0.11 && < 1

